tests/NormalTests/paczka1/small_fuzzy/90102912.err
Error in line 1: A387 S451 65,5
Error in line 9: zxe6C A93 19,31
Error in line 4: 96XYNy4u A93 62,3
Error in line 3: zxe6C A537 6,2
Error in line 10: opYCNf A93 78,7
Error in line 13: zxe6C A93 16,0
